model that deeply, you can apply and clear owner filters using
the "Set Owner Filter" menu item from the client's File menu, and the
tree and object choice lists in objects being edited will be
dynamically updated.

Voila, 'supergash' level power while still being able to 'drill down'
on a reasonable subset of the server's data.

-------------------- Changes from 1.0.6 to 1.0.7 -------------------

RELEASE DATE: October 11, 2001

1. [SERVER] Deleted objects now have all of their fields logged

The Ganymede server has not been logging the status of objects when
they are deleted, which has made it in some cases impossible to
determine what was in an object when it was deleted.  In theory,
today, all objects created in the server will be logged with their
initial state as well as all changes made, but at ARL we had a great
deal of objects that were imported using the old 'directLoader' hack,
without any logging done.

The real advantage to this for other users will not so much be
for scanning the log file as it will be to make the object deletion
email more informative.

2. [SERVER] Better error message on field creation failure

The server now gives a better error message if a user tries to link an
object to a (previously undefined) field that the user does not have
permission to create.

3. [SERVER] Made sessions smarter about refusing to edit objects during commit

The DBSession class has been modified to disallow editing of new
objects during a transaction's commit or abort process.  This is to
help make sure that any code during the commitPhase1() and
commitPhase2() DBEditObject customization methods that seeks to bring
new objects into the transaction after the commit has already started
will trigger a runtimeException, rather than silently confusing the
commit logic.

This change shouldn't have any effect on any code provided with the
Ganymede distribution or the userKit, but might force an error in